--- a/ML_Notes/python_crash_course.ipynb
+++ b/ML_Notes/python_crash_course.ipynb
@@ -1,104 +1,67 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Python is a Scripting Language which has two versions Python3 & Python2.7\n",
-    "# Developed by G.V.Rossum in Late 80's\n",
-    "# Published in 1992 with an open source license "
+    "## Introduction Python \n",
+    "    - Python is a Scripting Language which has two versions Python3 & Python2.7\n",
+    "    - Developed by G.V.Rossum in Late 80's\n",
+    "    - Published in 1992 with an open source license \n",
+    "\n",
+    "\n",
+    "## What we can do with Python?\n",
+    "\n",
+    "####    1. Development Field\n",
+    "        1. Desktop App/software using TKinter, PyQt and WXPython Frameworks\n",
+    "        2. Web Apps using Djnago and Flask Frameworks\n",
+    "        3. Mobile Apps using Kivy Framework (its gonna be a Hybrid App)\n",
+    "\n",
+    "\n",
+    "####    2. Data Science \n",
+    "        1. Big Data using Spark or Hadoop clusters)\n",
+    "        2. Machine Learning \n",
+    "        3. Deep Learning\n",
+    "        4. NLP\n",
+    "        5. Computer Vision\n",
+    "   "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# What we can do with Python?\n",
+    "## some useful terms\n",
+    "    1. variable : - a memory location where user can store their data and giv it an identity \n",
+    "    2. data type : - a perticular kind of data which we can store using variable \n",
+    "    3. assignment operator : - the sign which is used to assign values on variables \n",
+    "    \n",
+    "    example: - \n",
+    "    \n",
+    "         a  =  10\n",
+    "    \n",
+    "    where 'a' is variable, '=' is a assignment operator and '10' is an integer value which we wanna store on the variable 'a'\n",
     "\n",
-    "# 1. Development Field\n",
-    "#         1. Desktop App/software using TKinter, PyQt and WXPython Frameworks\n",
-    "#         2. Web Apps using Djnago and Flask Frameworks\n",
-    "#         3. Mobile Apps using Kivy Framework (its gonna be a Hybrid App)\n",
-    "\n",
-    "\n",
-    "# 2. Data Science \n",
-    "#         1. Big Data using Spark or Hadoop clusters)\n",
-    "#         2. Machine Learning \n",
-    "#         3. Deep Learning\n",
-    "#         4. NLP\n",
-    "#         5. Computer Vision"
+    "     Many languages use curly braces to delimit blocks of code. Python uses indentation\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# you can find out the designing principal of python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Zen of Python, by Tim Peters\n",
-      "\n",
-      "Beautiful is better than ugly.\n",
-      "Explicit is better than implicit.\n",
-      "Simple is better than complex.\n",
-      "Complex is better than complicated.\n",
-      "Flat is better than nested.\n",
-      "Sparse is better than dense.\n",
-      "Readability counts.\n",
-      "Special cases aren't special enough to break the rules.\n",
-      "Although practicality beats purity.\n",
-      "Errors should never pass silently.\n",
-      "Unless explicitly silenced.\n",
-      "In the face of ambiguity, refuse the temptation to guess.\n",
-      "There should be one-- and preferably only one --obvious way to do it.\n",
-      "Although that way may not be obvious at first unless you're Dutch.\n",
-      "Now is better than never.\n",
-      "Although never is often better than *right* now.\n",
-      "If the implementation is hard to explain, it's a bad idea.\n",
-      "If the implementation is easy to explain, it may be a good idea.\n",
-      "Namespaces are one honking great idea -- let's do more of those!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import this"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# variable : - a memory location where user can store their data and giv it an identity \n",
+    "## List\n",
     "\n",
-    "# data type : - a perticular kind of data which we can store using variable \n",
+    "    -a list is simply an ordered collection. \n",
+    "    -it a kind of array but with some added functionality\n",
     "    \n",
-    "# assignment operator : - the sign which is used to assign values on variables \n",
+    "## Tuple \n",
     "    \n",
-    "# example: - \n",
-    "    \n",
-    "#     a  =  10\n",
-    "    \n",
-    "# where 'a' is variable, '=' is a assignment operator and '10' is an integer value which we wanna store on \n",
-    "# the variable 'a'\n",
+    "    -is a immutable list which we cant change or modify once we create it.\n",
     "\n",
-    "# Many languages use curly braces to delimit blocks of code. Python uses indentation\n"
+    "\n",
+    "## Dictionary \n",
+    "\n",
+    "    -is a list which stores key value pair. where value associates with a key"
    ]
   },
   {
@@ -126,10 +89,6 @@
     }
    ],
    "source": [
-    "# list\n",
-    "\n",
-    "# a list is simply an ordered collection. \n",
-    "# it a kind of array but with some added functionality\n",
     "\n",
     "a = [1,2,3]   #homogeneous data list\n",
     "b = [1,2.2,'hello']   #heterogeneous data list\n",
@@ -171,10 +130,7 @@
     "\n",
     "\n",
     "\n",
-    "# Tuple is a immutable list which we cant change or modify once we create it.\n",
     "\n",
-    "\n",
-    "# Dictionary is a list which stores key value pair. where value associates with a key\n",
     "grades = { \"Joel\" : 80, \"Tim\" : 95 }\n",
     "\n",
     "grades.keys()\n",
@@ -182,15 +138,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sets\n",
+    "\n",
+    "    - Another data structure is set, which represents a collection of distinct elements\n",
+    "    - We’ll use sets for two main reasons. find the distinct item or very fast operation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sets\n",
-    "\n",
-    "# Another data structure is set, which represents a collection of distinct elements:\n",
-    "\n",
     "s = set()\n",
     "\n",
     "s.add(1) # s is now { 1 }\n",
@@ -199,10 +161,7 @@
     "\n",
     "x = len(s) # equals 2\n",
     "y = 2 in s # equals True\n",
-    "z = 3 in s # equals False\n",
-    "\n",
-    "\n",
-    "# We’ll use sets for two main reasons. find the distinct item or very fast operation"
+    "z = 3 in s # equals False"
    ]
   },
   {
@@ -269,35 +228,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
    "source": [
-    "# generator \n",
+    "## generator \n",
     "\n",
-    "# A generator is something that you can iterate over but\n",
-    "# whose values are produced only as needed\n",
-    "\n",
-    "\n",
-    "# One way to create generators is with functions and the yield operator\n",
+    "    - A generator is something that you can iterate over but whose values are produced only as needed\n",
+    "    - One way to create generators is with functions and the yield operator\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def lazyrange(n):\n",
     "    i = 0\n",
@@ -306,8 +252,8 @@
     "        i +=1\n",
     "        \n",
     "    \n",
-    "for i in lazyrange(10):\n",
-    "    print(i)"
+    "# for i in lazyrange(10):\n",
+    "#     print(i)"
    ]
   },
   {
@@ -340,11 +286,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Regular Expressions ----> create some notes for it "
+    "# Regular Expressions ----> create some notes for it, i dont have notes because regular expression itself a \n",
+    "#very big topic "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions in Python \n",
+    "\n",
+    "    function is a set of instructions or we can say function is a rule for taking zero or more inputs and returning a corresponding output"
    ]
   },
   {
@@ -364,11 +320,6 @@
     }
    ],
    "source": [
-    "# functions in python \n",
-    "\n",
-    "\n",
-    "# function is a set of instructions or we can say function is a rule for taking\n",
-    "# zero or more inputs and returning a corresponding output\n",
     "\n",
     "# like: \n",
     "\n",
